footer-link-spacing | Fix footer link spacing, restore menu block config

--- a/docroot/themes/msca_theme/sass/footer/_footer.scss
+++ b/docroot/themes/msca_theme/sass/footer/_footer.scss
@@ -26,10 +26,12 @@
 // Footer menu
 .site-footer-left .navbar-nav {
   flex-direction: row;
+  flex-wrap: wrap;
   li {
     padding-right: $grid-gutter-width-base;
     a {
       color: $gray-text;
+      padding-right: 10px;
     }
   }
 }
